--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             </div>
             
             <div id="text-container">
-                Home Page       
+                My name is Hunter Livesay and I am currently a BS of Computer Science student at Brigham Young University Idaho. 
+                
+                I've been programming for about 11 years now. I got my start trying to program video games in an obscure langauge called DarkBasic. Later I started programming MineCraft mods, before eventually transfering into Unity3D programming in C#. Eventually I realized I liked the problems in programming than I liked making games and switched to learning more about algorithms and computational theory. 
             </div>
         </div>
 
