--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
             </div>
             
             <div id="text-container">
-                My name is Hunter Livesay and I am currently a BS of Computer Science student at Brigham Young University Idaho. I'm set to graduate in July of 2022. 
-                <br>
-                I've been programming for about 11 years now. I got my start trying to program video games in an obscure langauge called DarkBasic. Later I started programming MineCraft mods, before eventually transfering into Unity3D programming in C#. Eventually I realized I liked the problems in programming than I liked making games and switched to learning more about algorithms and computational theory. Now I research artificial intelligence and more specifically machine learning. 
+                <h2>About Me</h2>
+                <p>My name is Hunter Livesay and I am currently a BS of Computer Science student at Brigham Young University Idaho. I'm set to graduate in July of 2022. </p>
+                <h3>How I Started</h3>
+                <p>I've been programming for about 11 years now. I got my start trying to program video games in an obscure langauge called DarkBasic. Later I started programming MineCraft mods, before eventually transfering into Unity3D programming in C#. Eventually I realized I liked the problems in programming than I liked making games and switched to learning more about algorithms and computational theory. Now I research artificial intelligence and more specifically machine learning. </p>
+                <h3>My Goal</h3>
+                <p>It is my life goal to be able to develop </p>
             </div>
         </div>
 
@@ -74,12 +77,16 @@
         </div>
 
         <div id="projects_page">
-            <div id="image-container">
-                <img src="20201226_184603.jpg" style="object-fit: contain; width: 100%; height: 250px;"/>
-            </div>
             
             <div id="text-container">
-                Projects Page
+                <h2>Delta Music</h2>
+                <p></p>
+
+                <h2>Othello Learner</h2>
+                <p></p>
+
+                <h2>Delta Music</h2>
+                <p></p>
             </div>
         </div>
 
